[kernel] fold the cross-framework benches into kyo-kernel's jmh tree
The kyo-kernel-bench-cross project dissolves: its four benches move to
jvm/src/jmh/scala/kyo/kernel/bench/cross and the framework dependencies
(zio, cats-effect, zio-blocks-async, turbolift) are jmh-scoped, so they
reach only the Jmh classpath. The -Xss32m fork option rides along for
the zio-blocks depth rows. Jmh compile green.